<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    tools:context=".Fragment_1">

    <!-- TODO: Layout datos de contacto-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:background="@null"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="false"
            android:src="@drawable/violetta_color" />

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|clip_vertical"
                android:layout_marginBottom="20dp"
                android:background="@null"
                android:orientation="vertical">

                <!-- TITULO -->
                <LinearLayout
                    android:layout_marginBottom="10dp"
                    android:layout_weight="100"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_weight="20"
                        android:layout_width="50dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/negro"/>

                    <TextView
                        android:layout_weight="60"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="left|center_vertical"
                        android:text="@string/titulo_datos_de_contacto"
                        android:textAlignment="center"
                        android:textColor="@color/negro"
                        android:textSize="14sp" />


                    <View
                        android:layout_weight="20"
                        android:layout_width="50dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/negro"/>


                </LinearLayout>

                <!-- NOMBRE -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">

                        <EditText
                            android:id="@+id/nombre_postulante"
                            android:backgroundTint="@color/negro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_person"
                            android:focusable="auto"
                            android:hint="@string/nombre"
                            android:inputType="text"
                            android:textSize="14dp" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <!-- APELLIDO -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">

                        <EditText
                            android:id="@+id/apellido_postulante"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_person"
                            android:focusable="auto"
                            android:hint="@string/apellido"
                            android:inputType="text"
                            android:textSize="14dp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">

                        <EditText
                            android:id="@+id/fecha_nacimiento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_date"
                            android:focusable="auto"
                            android:hint="@string/fechanac"
                            android:textSize="14dp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <!-- DNI -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:weightSum="100"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="100">

                        <EditText
                            android:id="@+id/documento_postulante"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_person"
                            android:focusable="auto"
                            android:hint="@string/dni"
                            android:inputType="number"
                            android:textSize="14dp" />

                    </android.support.design.widget.TextInputLayout>

                    <!-- FOTO DNI -->
                    <ImageView
                        android:layout_weight="0"
                        android:id="@+id/cam_dni"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_cam" />
                </LinearLayout>

                <!-- ESTADO CIVIL -->
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:weightSum="100"
                    android:orientation="horizontal">

                    <TextView
                        android:drawableStart="@drawable/ic_person"
                        android:layout_weight="30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:hint="@string/estado_civil"
                        android:layout_gravity="left|center_vertical"
                        android:backgroundTint="@color/negro"
                        android:textColor="@color/negro"
                        android:textSize="14sp" />

                    <Spinner
                        android:layout_weight="70"
                        android:id="@+id/estadocivil"
                        android:prompt="@string/estado_civil"
                        style="@style/Platform.Widget.AppCompat.Spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/negro"
                        android:spinnerMode="dialog"
                        android:textColor="@color/blanco"
                        android:layout_gravity="left" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">

                        <EditText
                            android:id="@+id/email_postulante"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_mail"
                            android:focusable="auto"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textSize="14dp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <!-- TELEFONO -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:orientation="horizontal">


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">

                        <EditText
                            android:id="@+id/telefono_postulante"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_phon"
                            android:focusable="auto"
                            android:hint="@string/telefono"
                            android:inputType="number"
                            android:textSize="14dp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <!-- OCUPACION -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp">

                        <EditText
                            android:id="@+id/ocupacion_postulante"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_work"
                            android:focusable="auto"
                            android:hint="@string/ocupacion"
                            android:inputType="text"
                            android:textSize="14dp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>